--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "nunjucks": "^3.1.3"
+  },
+  "devDependencies": {
+    "eslint": "^5.1.0",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.13.0"
   }
 }
