--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "nunjucks": "^3.1.3"
+    "nunjucks": "^3.1.3",
+    "sequelize": "^4.38.0"
   },
   "devDependencies": {
     "eslint": "^5.1.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.13.0",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "sequelize-cli": "^4.0.0"
   }
 }
