--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mysql2": "^1.5.3",
     "nunjucks": "^3.1.3",
     "sequelize": "^4.38.0"
