--- a/Modulo03/package.json
+++ b/Modulo03/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "mongoose": "^5.2.6"
+    "mongoose": "^5.2.6",
+    "require-dir": "^1.0.0"
   }
 }
