Adicionando body-parser e Insomnia

--- a/Modulo03/package.json
+++ b/Modulo03/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.2.6",
     "require-dir": "^1.0.0"
