--- a/Modulo03/package.json
+++ b/Modulo03/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.6",
     "require-dir": "^1.0.0"
   }
