--- a/Modulo03/package.json
+++ b/Modulo03/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.6",
+    "raven": "^2.6.3",
     "require-dir": "^1.0.0"
   }
 }
