--- a/Modulo03/package.json
+++ b/Modulo03/package.json
@@ -21,8 +21,11 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "handlebars": "^4.0.11",
+    "html-to-text": "^4.0.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.6",
+    "nodemailer": "^4.6.7",
     "raven": "^2.6.3",
     "require-dir": "^1.0.0"
   }
