--- a/modulo04/package.json
+++ b/modulo04/package.json
@@ -24,6 +24,7 @@
     "@adonisjs/framework": "^5.0.7",
     "@adonisjs/ignitor": "^2.0.6",
     "@adonisjs/lucid": "^5.0.4",
+    "crypto": "^1.0.1",
     "mysql": "^2.16.0"
   },
   "devDependencies": {
