--- a/modulo04/package.json
+++ b/modulo04/package.json
@@ -26,6 +26,7 @@
     "@adonisjs/lucid": "^5.0.4",
     "@adonisjs/mail": "^3.0.8",
     "crypto": "^1.0.1",
+    "moment": "^2.22.2",
     "mysql": "^2.16.0"
   },
   "devDependencies": {
