--- a/modulo04/package.json
+++ b/modulo04/package.json
@@ -25,6 +25,7 @@
     "@adonisjs/ignitor": "^2.0.6",
     "@adonisjs/lucid": "^5.0.4",
     "@adonisjs/mail": "^3.0.8",
+    "@adonisjs/validator": "^5.0.3",
     "crypto": "^1.0.1",
     "moment": "^2.22.2",
     "mysql": "^2.16.0"
