--- a/modulo04/package.json
+++ b/modulo04/package.json
@@ -31,7 +31,8 @@
     "adonis-kue": "^5.0.1",
     "crypto": "^1.0.1",
     "moment": "^2.22.2",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "raven": "^2.6.3"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
