--- a/Modulo05/package.json
+++ b/Modulo05/package.json
@@ -11,14 +11,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "nodemon": "^1.18.3",
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-chai-friendly": "^0.4.1",
+    "eslint-plugin-import": "^2.13.0",
+    "factory-girl": "^5.0.2",
+    "faker": "^4.1.0",
     "mocha": "^5.2.0",
-    "eslint-plugin-chai-friendly": "^0.4.1"
+    "nodemon": "^1.18.3"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
